<resources>
    <string name="app_name">What2Do</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="pending">Pending</string>
    <string name="about">About</string>
    <string name="empty">Empty</string>

    <string name="title">Title</string>
    <string name="remind_me">Remind Me</string>
    <string name="at">\@</string>
    <string name="description">Description</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="todo_error">Title cannot be empty</string>
    <string name="date_error_check_again">Time travel seems hard to do. Enter a valid date</string>
    <string name="date_default">Today</string>
    <string name="version">Version 1.0</string>
    <string name="dev_email">Contact us!</string>
    <string name="dev_github">Fork us on Github!</string>
    <string name="remove">Remove</string>
    <string name="snooze">Snooze</string>
    <string name="done_label">Done</string>
    <string name="priority">Priority</string>

    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>

    <string-array name="priority_options">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>
