<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.AboutFragment">

    <ImageView
        android:id="@+id/img_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/text_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/img_app"/>

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_app"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_email"
        android:textSize="22sp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:layout_below="@id/text_version"/>

    <TextView
        android:id="@+id/text_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_github"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_github"
        android:drawablePadding="5dp"
        android:layout_below="@id/text_email"/>

</RelativeLayout>