<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:context=".view.fragment.AddTodoFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_todo_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Chip"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_todo_title"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/title"
                        android:inputType="textAutoCorrect|textCapSentences"
                        android:lines="2"
                        android:maxLength="30"
                        android:maxLines="3"
                        android:textColor="@color/colorPrimaryText"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Chip"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_todo_desc"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/description"
                        android:inputType="textMultiLine|textCapSentences"
                        android:lines="2"
                        android:maxLines="3"
                        android:scrollbars="vertical"
                        android:textColor="@color/colorIcon"/>

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    style="@style/ItemLabel"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_priority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_todo_reminder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="#212121"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:drawableStart="@drawable/ic_clock"
                        android:drawablePadding="8dp"
                        android:text="@string/remind_me"
                        android:textColor="@color/colorIcon"
                        android:textSize="16sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_todo_reminder"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        style="@style/SwitchTheme"
                        app:useMaterialThemeColors="false"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_todo_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="top">

                        <TextView
                            android:id="@+id/text_todo_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/colorIcon"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textIsSelectable="false"
                            tools:text="Monday, 21-01-2019"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".2"
                            android:gravity="center"
                            android:padding="4dp"
                            android:textSize="16sp"
                            android:text="@string/at"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/text_todo_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textColor="@color/colorIcon"
                            android:textIsSelectable="false"
                            tools:text="10:00 AM"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_todo_reminder"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:text="@string/remind_date_and_time"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_make_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_send"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="normal"
            app:layout_anchor="@+id/linear_layout_todo_content"
            app:layout_anchorGravity="bottom|right" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>